cambio de titulo branca secundaria

--- a/applications.html
+++ b/applications.html
@@ -4,14 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Bitnami: Open Source. Simplified</title>
   <link href="bitnami.css" media="all" rel="Stylesheet" type="text/css" /> 
-  <link href="/dashboard/stylesheets/all.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="contain-to-grid">
     <nav class="top-bar" data-topbar>
       <ul class="title-area">
         <li class="name">
-          <h1><a href="/dashboard/index.html">Apache Friends</a></h1>
+          <h1><a href="index.html">Apache Friends</a></h1>
         </li>
         <li class="toggle-topbar menu-icon">
           <a href="#">
@@ -24,9 +24,9 @@
         <!-- Right Nav Section -->
         <ul class="right">
           <li class="active"><a href="/applications.html">Applications</a></li>
-          <li class=""><a href="/dashboard/faq.html">FAQs</a></li>
-          <li class=""><a href="/dashboard/howto.html">HOW-TO Guides</a></li>
-          <li class=""><a target="_blank" href="/dashboard/phpinfo.php">PHPInfo</a></li>
+          <li class=""><a href="faq.html">FAQs</a></li>
+          <li class=""><a href="howto.html">HOW-TO Guides</a></li>
+          <li class=""><a target="_blank" href="phpinfo.php">PHPInfo</a></li>
           <li class=""><a href="/phpmyadmin/">phpMyAdmin</a></li>
         </ul>
       </section>
@@ -63,7 +63,7 @@
               <li><a href="https://www.apachefriends.org/privacy_policy.html">Privacy Policy</a></li>
               <li>
                 <a target="_blank" href="http://www.fastly.com/">                    CDN provided by
-                  <img width="48" data-2x="/dashboard/images/fastly-logo@2x.png" src="/dashboard/images/fastly-logo.png" />
+                  <img width="48" data-2x="images/fastly-logo@2x.png" src="images/fastly-logo.png" />
                 </a>
               </li>
             </ul>
