--- a/dashboard/faq.html
+++ b/dashboard/faq.html
@@ -514,3 +514,4 @@ EnableMMAP off</code></p>
     <script src="/dashboard/javascripts/all.js" type="text/javascript"></script>
   </body>
 </html>
+<h1>buenas<h1>
